MINIFICPP-1028 - http url parsing without port fails

This closes #645.

Signed-off-by: Marc Parisi <phrocker@apache.org>